k8s/ingress/external-name-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc-bridge
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  type: ExternalName
  externalName: kibana.elastic-stack.svc.cluster.local
  ports:
    - name: http
      port: 5601
      targetPort: 5601
