k8s/ingress/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: argocd.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-svc-bridge
                port:
                  number: 443
  tls:
    - hosts:
        - argocd.cash-gun.com
      secretName: tls-argocd-cash-gun
