k8s/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdomain-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "10"  
    # Security Headers
spec:
  rules:
    - host: status-page.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: grafana.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc-bridge
                port:
                  number: 80
    - host: kibana.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc-bridge
                port:
                  number: 5601
  tls:
    - hosts:
        - status-page.cash-gun.com
        - grafana.cash-gun.com
        - kibana.cash-gun.com
      secretName: tls-services-cash-gun
